Fix prev/next article blocks that were causing horizontal scrollbar

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1418,7 +1418,7 @@ body:not(.post-template) .post-title {
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
-    min-width: 50%;
+    min-width: 49%;
     text-decoration: none;
     position: relative;
     text-align: center;
